--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -1,5 +1,5 @@
 <md-content class="page" style="height: {{window_height}}px">
-	<section style="background: {{base_hue_lighter.value}}">
+	<section style="background: {{primary_hue_normal.value}}">
 		
 		<!-- header -->
 		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
