--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -28,7 +28,7 @@
 			<!-- =Page Title -->
 
 			<!-- tab Panel Component -->
-		    <md-card class="md-whiteframe-8dp" layout="row" layout-align="center start" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" style="z-index: 3; min-height: 500px; margin-bottom: 100px;" layout-padding layout-margin>
+		    <md-card class="md-whiteframe-8dp" layout="row" layout-align="center start" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" style="z-index: 3; min-height: 500px;" layout-padding layout-margin>
 
 		    	<div ng-repeat="content in infoPage.data.page.contents" flex="100">
 		    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
