--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -1,5 +1,5 @@
 <md-content class="page" style="height: {{window_height}}px">
-	<section style="background: {{primary_hue_normal.value}}">
+	<section style="background: {{base_hue_lighter.value}}">
 		
 		<!-- header -->
 		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
@@ -24,7 +24,7 @@
 			</div>
 			<!-- =Page Title -->
 
-		    <div class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}}; margin-bottom: 100px;" layout-padding layout-margin>
+		    <div class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
