--- a/lib/client/app/stylesheets/pages.css
+++ b/lib/client/app/stylesheets/pages.css
@@ -32,6 +32,7 @@
 /* ===== Lighweight Image Cards ===== */
 .lightweight-card-image {
  	height: 400px;
+ 	overflow: hidden;
 }
 @media (max-width: 839px) {
 	.lightweight-card-image {
