--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -16,12 +16,12 @@
 		<div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div class="md-whiteframe-8dp" layout-margin layout="row" flex="90" flex-sm="90" flex-gt-sm="75" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}; margin-top: 16px;">
+			<!-- <div class="md-whiteframe-8dp" layout-margin layout="row" flex="90" flex-sm="90" flex-gt-sm="75" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}; margin-top: 16px;">
 				<div style="width: 100%; height: 100%; position: absolute; margin: 0;">
 				    <img style="min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto; text-shadow: 1px 1px 8px rgba(0, 0, 0, .8);" class="type simulated">{{blogPage.data.title}}</h2>
-			</div>
+			</div> -->
 			<!-- =Page Title -->
 
 		    <md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding>
@@ -30,6 +30,7 @@
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
+                        	<h3 style="font-size: 24px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.title}}</h3>
                         	<h3 style="font-size: 42px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.headline}}</h3>
                             <h3 ng-attr-style="font-size: 16px; color: {{primary_hue_normal.value}};">{{blogPage.data.subtitle}}</h3>
                             <p style="font-size: 16px;">By {{blogPage.data.author}}  /  {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
