--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -15,36 +15,6 @@
 
 		<div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
-		    <md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding>
-
-				<md-list class="md-dense" flex="100" flex-gt-sm="100">
-                    <md-list-item class="md-3-line" flex style="padding: 0;">
-                        <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
-                        <div class="md-list-item-text">
-                        	<h3 style="font-size: 24px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.title}}</h3>
-                        	<h3 style="font-size: 42px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.headline}}</h3>
-                            <h3 ng-attr-style="font-size: 16px; color: {{primary_hue_normal.value}};">{{blogPage.data.subtitle}}</h3>
-                            <p style="font-size: 16px;">By {{blogPage.data.author}}  /  {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
-                        </div>
-                    </md-list-item>
-                </md-list>
-		    	<div ng-repeat="content in blogPage.data.page.contents" flex="100">
-		    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px; margin-bottom: 8px;"></h1>
-					<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
-					<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
-					<div style="width: 100%; padding: 0">
-						<!-- panel images -->
-							<md-card ng-cloak class="lightweight-card-image md-whiteframe-2dp" ng-if="content.type == 'image'" ng-attr-style="position: relative;">
-								<img ng-src="{{content.source ? content.source : 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png'}}" class="md-card-image">
-							</md-card>
-						<!-- panel images -->
-					</div>
-					<a ng-if="content.type == 'button'" href="{{content.data.url}}">
-                        <md-button class="md-raised" style="margin-top: 8px; margin-bottom: 16px; background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">{{content.data.button}}</md-button>
-                    </a>
-		        </div>
-		    </md-card>
-
 		    <div class="md-whiteframe-8dp sidebar form" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" ng-attr-style="z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; padding: 0; margin: 8px 0;">
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
 	                <form name="spotlight">
@@ -101,6 +71,18 @@
 	                </form>
 	            </md-card>
 			</div>
+
+			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding>
+				<md-list class="md-dense" flex>
+                    <md-list-item class="md-2-line" ng-repeat="blog in bloglist" flex>
+                        <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
+                        <div class="md-list-item-text">
+                            <h3 style="font-size: 24px;">{{blog.data.headline}} </h3>
+                            <p> By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm:ss a"}} </p>
+                        </div>
+                    </md-list-item>
+                </md-list>
+		    </md-card>
 
 		    
 
