--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -68,9 +68,9 @@
 	            </md-card>
 			</div>
 
-			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding>
+			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}};" layout-padding>
 				<md-list class="md-dense" flex>
-                    <md-list-item class="md-2-line" ng-repeat="blog in bloglist" flex>
+                    <md-list-item class="md-2-line" ng-repeat="blog in bloglist" ng-click="null" flex>
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
                             <h3 style="font-size: 24px;">{{blog.data.headline}} </h3>
