--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -76,6 +76,9 @@
                             <h3 style="font-size: 24px;">{{blog.data.headline}} </h3>
                             <p> By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm:ss a"}} </p>
                         </div>
+                        <a ng-href="{{blog.settings.url}}" class="md-secondary">
+                        	<md-icon aria-label="view blog" style="color: {{base_hue_darkest.value}};">chevron_right</md-icon>
+                        </a>
                     </md-list-item>
                 </md-list>
 		    </md-card>
