--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -19,15 +19,15 @@
 	                	</div>
 	                    <md-card-content>
 	                        <md-list-item>
-	                            <md-input-container class="md-block lightweight-md-input">
-	                                <label>Full Name</label>
-	                                <input name="name" ng-model="spotlight_page_contact_form.name" minlength="4" required>
-	                                <div ng-messages="spotlight.name.$error" ng-show="spotlight.name.$dirty">
-	                                    <div ng-message="required">Name required!</div>
-	                                    <div ng-message="minlength">Name too short!</div>
-	                                </div>
+	                            <md-button ng-click="queryUser(queryUserFilter)" class="md-icon-button" aria-label="Search Media">
+	                                <md-icon style="color: {{base_hue_darker.value}};">search</md-icon>
+	                            </md-button>
+	                            <md-input-container class="md-block lightweight-md-input" style="margin: 0;" flex>
+	                                <label>Search</label>
+	                                <input ng-model="queryUserFilter">
 	                            </md-input-container>
 	                        </md-list-item>
+	                        <md-divider></md-divider>
 	                        <md-list-item>
 	                            <md-input-container class="md-block lightweight-md-input">
 	                                <label>Email</label>
