--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -15,7 +15,7 @@
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
 	                <form name="spotlight">
 	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
-	                		<h1 style="color: {{primary_hue_normal.value}};">Contact mma Today!</h1>
+	                		<h1 style="color: {{primary_hue_normal.value}};">{{company_name}} News</h1>
 	                	</div>
 	                    <md-card-content>
 	                        <md-list-item>
