--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -15,7 +15,7 @@
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
 	                <form name="spotlight">
 	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
-	                		<h1 style="color: {{primary_hue_normal.value}};">{{company_name}} News</h1>
+	                		<h1 style="color: {{primary_hue_normal.value}};">{{settings.data.company_name}} News</h1>
 	                	</div>
 	                    <md-card-content>
 	                        <md-list-item>
@@ -28,41 +28,27 @@
 	                            </md-input-container>
 	                        </md-list-item>
 	                        <md-divider></md-divider>
+	                        <p>Or</p>
+	                       	<p>Filter by date</p>
 	                        <md-list-item>
-	                            <md-input-container class="md-block lightweight-md-input">
-	                                <label>Email</label>
-	                                <input type="email" name="email" ng-model="spotlight_page_contact_form.email" required>
-	                                <div ng-messages="spotlight.email.$error" ng-show="spotlight.email.$dirty">
-	                                    <div ng-message="required">Email required!</div>
-	                                    <div ng-message="email">Enter a valid email!</div>
-	                                </div>
-	                            </md-input-container>
-	                        </md-list-item>
-	                        <md-list-item>
+		                        <md-radio-group>
+	                                <span>
+	                                    <md-radio-button ng-show="elementToUpdate" value="before">Before</md-radio-button>
+	                                </span>
+	                                <span>
+	                                    <md-radio-button ng-show="elementToUpdate" value="after">After</md-radio-button>
+	                                </span>
+	                            </md-radio-group>
+                            </md-list-item>
+                            <md-list-item>
                                 <md-input-container class="md-block lightweight-md-input">
-                                    <label>Phone</label>
-                                    <input ng-model="spotlight_page_contact_form.phone" ng-pattern="/^[(]{0,1}[0-9]{3}[)]{0,1}[-\s\.]{0,1}[0-9]{3}[-\s\.]{0,1}[0-9]{4}$/" name="phone" minlength="10" required>
-                                    <div ng-messages="spotlight.phone.$error" ng-show="spotlight.phone.$dirty">
-                                        <div ng-message="required">Phone number required!</div>
-                                        <div ng-message="minlength">Phone number too short!</div>
-                                        <div ng-message="pattern">Not a valid phone number!</div>
-                                    </div>
+                                    <label>Filter By Date</label>
+                                    <md-datepicker flex ng-model="selectedDate" md-placeholder="Pick a date"></md-datepicker>
                                 </md-input-container>
                             </md-list-item>
-	                        <md-list-item>
-	                        	<md-input-container class="md-block lightweight-md-input" flex>
-	                                <label>Message</label>
-	                                <textarea name="message" md-detect-hidden="true" ng-model="spotlight_page_contact_form.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
-	                                <div ng-messages="spotlight.message.$error" ng-show="spotlight.message.$dirty">
-	                                    <div ng-message="required">Message required!</div>
-	                                    <div ng-message="minlength">Message too short!</div>
-	                                    <div ng-message="md-maxlength">Message too long!</div>
-	                                </div>
-	                            </md-input-container>
-	                        </md-list-item>
 	                    </md-card-content>
-	                    <md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
-					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
+	                    <md-button class="md-fab custom-deep-button" aria-label="filter blog posts by date" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
+					        <md-icon style="color: {{base_hue_lighter.value}};">check</md-icon>
 					    </md-button>
 	                </form>
 	            </md-card>
@@ -70,16 +56,18 @@
 
 			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}};" layout-padding>
 				<md-list class="md-dense" flex>
+					<a ng-href="{{blog.settings.url}}" class="md-secondary">
                     <md-list-item class="md-2-line" ng-repeat="blog in bloglist" ng-click="null" flex>
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
                             <h3 style="font-size: 24px;">{{blog.data.headline}} </h3>
                             <p> By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm:ss a"}} </p>
                         </div>
-                        <a ng-href="{{blog.settings.url}}" class="md-secondary">
+                        
                         	<md-icon aria-label="view blog" style="color: {{base_hue_darkest.value}};">chevron_right</md-icon>
-                        </a>
+                        
                     </md-list-item>
+                    </a>
                 </md-list>
 		    </md-card>
 
