--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -32,10 +32,10 @@
 	                        <md-list-item>
 		                        <md-radio-group>
 	                                <span>
-	                                    <md-radio-button ng-show="elementToUpdate" value="before">Before</md-radio-button>
+	                                    <md-radio-button value="before">Before</md-radio-button>
 	                                </span>
 	                                <span>
-	                                    <md-radio-button ng-show="elementToUpdate" value="after">After</md-radio-button>
+	                                    <md-radio-button value="after">After</md-radio-button>
 	                                </span>
 	                            </md-radio-group>
                             </md-list-item>
