--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -42,7 +42,7 @@
                             <md-list-item>
                                 <md-input-container class="md-block lightweight-md-input">
                                     <label>Filter By Date</label>
-                                    <md-datepicker flex ng-model="selectedDate" md-placeholder="Pick a date"></md-datepicker>
+                                    <md-datepicker style="min-width: 75%;" flex ng-model="selectedDate" md-placeholder="Pick a date"></md-datepicker>
                                 </md-input-container>
                             </md-list-item>
 	                    </md-card-content>
