--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -18,7 +18,7 @@
 	                		<h1 style="color: {{primary_hue_normal.value}};">{{settings.data.company_name}} News</h1>
 	                	</div>
 	                    <md-card-content>
-	                    	<h1 style="color: {{base_hue_darkest.value}};">Enter Search Term</h1>
+	                    	<h1 style="color: {{base_hue_darkest.value}}; font-weight: normal;">Enter Search Term</h1>
 	                        <md-list-item>
 	                            <md-button ng-click="queryUser(queryUserFilter)" class="md-icon-button" aria-label="Search Media">
 	                                <md-icon style="color: {{base_hue_darker.value}};">search</md-icon>
@@ -28,12 +28,13 @@
 	                                <input ng-model="queryUserFilter">
 	                            </md-input-container>
 	                        </md-list-item>
-	                        <h1 style="color: {{base_hue_darkest.value}};">Filter By Date</h1>
+	                        <h1 style="color: {{base_hue_darkest.value}}; font-weight: normal;">Filter By Date</h1>
 	                        <md-list-item>
 		                        <md-radio-group>
 	                                <span>
 	                                    <md-radio-button value="before">Before</md-radio-button>
 	                                </span>
+	                                <br>
 	                                <span>
 	                                    <md-radio-button value="after">After</md-radio-button>
 	                                </span>
