--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -43,7 +43,7 @@
                             <br>
                             <md-list-item>
                                 <md-input-container class="md-block lightweight-md-input">
-                                    <label>Filter By Date</label>
+                                    <label>Select Date</label>
                                     <md-datepicker style="min-width: 75%;" flex ng-model="selectedDate" md-placeholder="Pick a date"></md-datepicker>
                                 </md-input-container>
                             </md-list-item>
