--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -21,7 +21,7 @@
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h3 style="font-size: 24px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.title}}</h3>
+                        	<h3 style="font-size: 24px; white-space: pre-wrap; font-weight: normal;">{{blogPage.data.title}}</h3>
                         	<h3 style="font-size: 42px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.headline}}</h3>
                             <h3 ng-attr-style="font-size: 16px; color: {{primary_hue_normal.value}};">{{blogPage.data.subtitle}}</h3>
                             <p style="font-size: 16px;">By {{blogPage.data.author}}  /  {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
