--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -19,7 +19,7 @@
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
-                        <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
+                        <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{primary_hue_normal.value}};">share</md-icon>
                         <div class="md-list-item-text">
                         	<h3 style="font-size: 24px; white-space: pre-wrap; font-weight: normal;">{{blogPage.data.title}}</h3>
                         	<h3 style="font-size: 42px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.headline}}</h3>
