--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -59,6 +59,7 @@
 				<md-list class="md-dense" flex>
 					<a ng-href="{{blog.settings.url}}">
                     <md-list-item class="md-3-line" flex>
+                    	<md-icon class="md-avatar-icon" aria-label="View details" style="color: {{primary_hue_normal.value}};">share</md-icon>
                         <div class="md-list-item-text">
                         	<h3 style="font-size: 24px;">{{blog.data.title}}</h3>
                             <p style="color: {{primary_hue_normal.value}};">{{blog.data.headline}}</p>
