--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -17,7 +17,7 @@
 
 		    <md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}};" layout-padding>
 
-				<md-list class="md-dense" flex="100" flex-gt-sm="100">
+				<md-list layout-margin layout-padding class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">                        
                         <div class="md-list-item-text">
                         	<h3 style="font-size: 24px; white-space: pre-wrap; font-weight: normal;">{{blogPage.data.title}}</h3>
