--- a/lib/client/app/stylesheets/text.css
+++ b/lib/client/app/stylesheets/text.css
@@ -2,7 +2,7 @@ input:-webkit-autofill, textarea:-webkit-autofill {-webkit-box-shadow: 0 0 0 50p
 input:-webkit-autofill:focus, textarea:-webkit-autofill:focus {-webkit-box-shadow: 0 0 0 50px #e0e0e0 inset; box-shadow: 0 0 0 50px #e0e0e inset; -webkit-text-fill-color: #333;}
 ul li {list-style-type: none!important;}
 p, h1, h2, h3, h4, h5, h6, li, form, textarea, span, 
-a, div, button{letter-spacing: 0em!important; font-family: 'Roboto', sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; letter-spacing: .4px!important; line-height: 24px;}
+a, div, button{letter-spacing: 0em!important; font-family: 'Roboto', sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; letter-spacing: .4px!important;}
 a {text-decoration: none;}
 
 p {font-size: 18px;}
