--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -177,7 +177,7 @@
 		<!-- slider #6 -->
 		<div class="lw-auto-slider" style="position: relative;">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">MMA IN THE NEWS</h1>
+				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="projects_aerial_mapping.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
