--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -10,7 +10,7 @@
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
 		<!-- slider #1 -->
-		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_civil_engineering">
+		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_civil_engineering.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
@@ -43,7 +43,7 @@
 		<!-- slider #1 -->
 
 		<!-- slider #2 -->
-		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_landscape_architecture">
+		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_landscape_architecture.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
@@ -76,7 +76,7 @@
 		<!-- slider #2 -->
 
 		<!-- slider #3 -->
-		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_planning">
+		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_planning.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
@@ -109,7 +109,7 @@
 		<!-- slider #3 -->
 
 		<!-- slider #4 -->
-		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_surveying">
+		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_surveying.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
@@ -142,7 +142,7 @@
 		<!-- slider #4 -->
 
 		<!-- slider #5 -->
-		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_gis">
+		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_gis.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
@@ -175,7 +175,7 @@
 		<!-- slider #5 -->
 
 		<!-- slider #6 -->
-		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_aerial_mapping">
+		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_aerial_mapping.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
